--- a/resume/index.html
+++ b/resume/index.html
@@ -246,7 +246,7 @@
               </div>
             </div>
             <ul class="ml-4 list-disc">
-              <li>Develope a staff of approximately 40 college students on a nightly basis</li>
+              <li>Develop a staff of approximately 40 college students on a nightly basis</li>
               <li>Interview and hire candidates and lead new-hire trainings</li>
               <li>Arrange the staff's work schedule and conduct biweekly all-staff meetings</li>
               <!-- <li>Assisted patrons via phone, email, and in-person</li>-->
