comment out clouds in home page

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <!-- END: Footer -->
     </main>
     <!-- START: Background Clouds -->
-    <img src="./assets/img/svg/clouds.svg" alt="clouds" class="w-full select-none" />
+    <!-- <img src="./assets/img/svg/clouds.svg" alt="clouds" class="w-full select-none" /> -->
     <!-- END: Background Clouds -->
     <!-- END: Content -->
   </body>
