updated verbiage for cs work experience

--- a/resume/index.html
+++ b/resume/index.html
@@ -147,10 +147,13 @@
                 Redesigned the
                 <a href="https://agknowledge.com" target="_blank">subsidiary website</a>
                 from scratch using
-                <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>
+                <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>, a new framework to the company
               </li>
+              <li
+                >Built a custom application to manage and organize greenhouse inventory (<a href="#project-green-house">detailed project below</a
+                >)</li
+              >
               <li>Configured back-end process for retrieving database records using Apache, Tomcat, REST, and MySQL</li>
-              <li>Designed front-end web applications using Angular on a client-need basis</li>
             </ul>
           </div>
           <!-- END: DiD Integration -->
@@ -278,7 +281,7 @@
         <h2 x-cloak x-show="version === '2'" class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Projects/Hobbies</h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: Greenhouse -->
-          <div x-cloak x-show="version === '1'" class="flex flex-col gap-y-1">
+          <div id="project-green-house" x-cloak x-show="version === '1'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Drag and Drop Greenhouse</p>
@@ -300,7 +303,7 @@
           </div>
           <!-- END: Greenhouse -->
           <!-- START: Blockey Hockey -->
-          <div class="flex flex-col gap-y-1">
+          <div id="project-blockey-hockey" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Blockey Hockey</p>
