updated graduation date

--- a/resume/index.html
+++ b/resume/index.html
@@ -85,8 +85,8 @@
               <a href="https://www.fullerton.edu" target="_blank" class="italic">California State University, Fullerton</a>
             </div>
             <div class="flex min-w-max flex-col text-right">
-              <p class="hidden xs:inline">December 2023</p>
-              <p class="xs:hidden">Dec. '23</p>
+              <p class="hidden xs:inline">May 2024</p>
+              <p class="xs:hidden">May '24</p>
               <p>Fullerton, CA</p>
             </div>
           </div>
@@ -154,6 +154,7 @@
                 >)</li
               >
               <li>Configured back-end process for retrieving database records using Apache, Tomcat, REST, and MySQL</li>
+              <li>Participated in teleconferences with CEOs and directors of agriculture companies -- recorded meeting minutes</li>
             </ul>
           </div>
           <!-- END: DiD Integration -->
@@ -367,7 +368,7 @@
               <li>Interview and hire candidates and lead new-hire trainings</li>
               <li>Arrange the staff's work schedule and conduct biweekly all-staff meetings</li>
               <!-- <li>Assisted patrons via phone, email, and in-person</li>-->
-              <li>Resolve conflict between participants and ensure the safety of all patrons and staff</li>
+              <li x-cloak x-show="version === '2'">Resolve conflict between participants and ensure the safety of all patrons and staff</li>
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
