added more description to work experience

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -87,9 +87,18 @@
             <ul class="ml-5 list-disc">
               <li>Manage a staff of approximately 40 student officials and attendants</li>
               <li>Interview and hire candidates as well as lead new-hire trainings</li>
-              <li>Arrange the staff's work schedule and conduct biweekly all-staff/sport-specific meetings</li>
-              <li>Schedule sporting matches via IMLeagues and send out mass emails to patrons</li>
-              <li>Resolve conflict between participants and ensure the safety of all everyone including staff</li>
+              <li>
+                <span>Schedule staff and games using</span>
+                <a href="https://www.subitup.com/" target="_blank">SubItUp</a>
+                <span>and</span>
+                <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a>
+                <span>respectively</span>
+              </li>
+              <li>Conduct captains' and regular all-staff/sport-specific meetings</li>
+              <li>Table, market, and promote intramural sports to the student body</li>
+              <li>Update staff handbook, sports rules documents, and employee policies & procedures</li>
+              <li>Evaluate sports officials on a nightly basis</li>
+              <li>Ensure the safety of all patrons and staff</li>
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
