edits to resume v2

--- a/cover/index.html
+++ b/cover/index.html
@@ -72,7 +72,7 @@
         <!-- END: Dynamic Date -->
 
         <!-- START: Company Information -->
-        <section id="company-info" class="flex flex-col -space-y-4">
+        <section id="company-info" class="hidden flex-col -space-y-4">
           <input
             id="hiring-manager"
             placeholder="Hiring Manager's Name"
