--- a/states/index.html
+++ b/states/index.html
@@ -9,57 +9,212 @@
     <link rel="stylesheet" href="/assets/styles/styles.css" />
   </head>
   <body>
-    <ul class="grid grid-cols-3 justify-items-center text-xl">
-      <li>Alabama</li>
-      <li>Alaska</li>
-      <li class="bg-green-500 font-semibold text-white">Arizona</li>
-      <li>Arkansas</li>
-      <li class="bg-green-500 font-semibold text-white">California</li>
-      <li>Colorado</li>
-      <li class="bg-purple-400 font-semibold text-white">Connecticut</li>
-      <li class="bg-purple-400 font-semibold text-white">Delaware</li>
-      <li class="bg-purple-400 font-semibold text-white">Florida</li>
-      <li>Georgia</li>
-      <li>Hawaii</li>
-      <li>Idaho</li>
-      <li>Illinois</li>
-      <li>Indiana</li>
-      <li class="bg-orange-500 font-semibold text-white">Iowa</li>
-      <li class="bg-orange-500 font-semibold text-white">Kansas</li>
-      <li>Kentucky</li>
-      <li>Louisiana</li>
-      <li>Maine</li>
-      <li class="bg-purple-400 font-semibold text-white">Maryland</li>
-      <li class="bg-purple-400 font-semibold text-white">Massachusetts</li>
-      <li>Michigan</li>
-      <li>Minnesota</li>
-      <li>Mississippi</li>
-      <li>Missouri</li>
-      <li>Montana</li>
-      <li class="bg-green-500 font-semibold text-white">Nebraska</li>
-      <li class="bg-green-500 font-semibold text-white">Nevada</li>
-      <li>New Hampshire</li>
-      <li class="bg-purple-400 font-semibold text-white">New Jersey</li>
-      <li class="bg-orange-500 font-semibold text-white">New Mexico</li>
-      <li class="bg-purple-400 font-semibold text-white">New York</li>
-      <li class="bg-green-500 font-semibold text-white">North Carolina</li>
-      <li>North Dakota</li>
-      <li>Ohio</li>
-      <li class="bg-green-500 font-semibold text-white">Oklahoma</li>
-      <li>Oregon</li>
-      <li>Pennsylvania</li>
-      <li class="bg-purple-400 font-semibold text-white">Rhode Island</li>
-      <li>South Carolina</li>
-      <li>South Dakota</li>
-      <li>Tennessee</li>
-      <li class="bg-green-500 font-semibold text-white">Texas</li>
-      <li class="bg-green-500 font-semibold text-white">Utah</li>
-      <li>Vermont</li>
-      <li class="bg-purple-400 font-semibold text-white">Virginia</li>
-      <li class="bg-green-500 font-semibold text-white">Washington</li>
-      <li>West Virginia</li>
-      <li>Wisconsin</li>
-      <li>Wyoming</li>
+    <h1 class="mx-auto mt-10 w-max text-4xl font-semibold text-gray-800">Jake's Visited States</h1>
+    <ul class="mx-20 mt-10 grid grid-cols-5 justify-items-center gap-y-2 text-xl">
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Alabama</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Alaska</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Arizona</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Arkansas</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">California</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Colorado</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Connecticut</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Delaware</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Florida</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Georgia</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Hawaii</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Idaho</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Illinois</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Indiana</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Iowa</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Kansas</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Kentucky</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Louisiana</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Maine</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Maryland</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Massachusetts</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Michigan</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Minnesota</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Mississippi</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Missouri</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Montana</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Nebraska</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Nevada</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">New Hampshire</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">New Jersey</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white">
+        <p class="text-center">New Mexico</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">New York</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">North Carolina</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">North Dakota</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Ohio</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Oklahoma</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Oregon</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Pennsylvania</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Rhode Island</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">South Carolina</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">South Dakota</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Tennessee</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Texas</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Utah</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Vermont</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Virginia</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Washington</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">West Virginia</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Wisconsin</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+        <p class="text-center">Wyoming</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+      </li>
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
+        <p class="text-center">Washington D.C.</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+      </li>
     </ul>
   </body>
 </html>
