--- a/states/index.html
+++ b/states/index.html
@@ -21,7 +21,7 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Arizona</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">28 Mar 2020</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Arkansas</p>
@@ -29,7 +29,7 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">California</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">23 Dec 1999</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Colorado</p>
@@ -37,15 +37,15 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Connecticut</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">27 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Delaware</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Florida</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">12 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Georgia</p>
@@ -69,11 +69,11 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white">
         <p class="text-center">Iowa</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">10 Nov 2022</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white">
         <p class="text-center">Kansas</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">28 Feb 2020</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Kentucky</p>
@@ -89,11 +89,11 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Maryland</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Massachusetts</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">27 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Michigan</p>
@@ -117,11 +117,12 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Nebraska</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">28 Feb 2020</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Nevada</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">Unknown</p>
+        <!-- TODO: Ask Parents when we went -->
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">New Hampshire</p>
@@ -129,19 +130,20 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">New Jersey</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white">
         <p class="text-center">New Mexico</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">27 Mar 2020</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">New York</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">25 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">North Carolina</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">Unknown</p>
+        <!-- TODO: Ask Parents when we went -->
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">North Dakota</p>
@@ -153,19 +155,19 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Oklahoma</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">10 Jul 2018</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Oregon</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
       </li>
-      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
+      <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Pennsylvania</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Rhode Island</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">28 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">South Carolina</p>
@@ -181,11 +183,11 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Texas</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">30 Mar 2018</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Utah</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">27 May 2022</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">Vermont</p>
@@ -193,11 +195,12 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Virginia</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Washington</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">Unknown</p>
+        <!-- TODO: Ask Parents when we went -->
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5">
         <p class="text-center">West Virginia</p>
@@ -213,7 +216,7 @@
       </li>
       <li class="flex w-60 flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white">
         <p class="text-center">Washington D.C.</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">01 Jan 1970</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
     </ul>
   </body>
