made NM green stayed in hotel in NM

--- a/states/index.html
+++ b/states/index.html
@@ -132,7 +132,7 @@
         <p class="text-center">New Jersey</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">29 Jul 2023</p>
       </li>
-      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
+      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">New Mexico</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">27 Mar 2020</p>
       </li>
