--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -104,7 +104,7 @@
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
-                <p class="font-bold">Intramural Sports Supervisor</p>
+                <p class="font-bold">Intramural Sports Supervisor / Official</p>
                 <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"
                   >Oklahoma State University, Department of Wellness</a
                 >
