--- a/cover/index.html
+++ b/cover/index.html
@@ -15,13 +15,13 @@
   </head>
 
   <body
-    class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-sans selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:py-0">
+    class="layout relative mx-auto h-full max-w-[750px] pb-80 pt-10 font-sans selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:py-0">
     <!-- START: Page -->
     <div class="flex flex-col gap-y-2 print:gap-y-1.5">
       <!-- START: Header -->
       <section id="header" class="relative flex flex-col text-center">
         <div class="-mx-8 flex border-2 border-black">
-          <h1 class="mx-auto w-max pt-10 pb-20 text-4xl font-semibold uppercase tracking-wide">Computer Science Cover Letter</h1>
+          <h1 class="mx-auto w-max pb-20 pt-10 text-4xl font-semibold uppercase tracking-wide">Computer Science Cover Letter</h1>
         </div>
         <!-- START: Contact Information -->
         <div class="mx-auto -mt-12 flex w-[80%] bg-indigo-500 p-5 px-10 print:px-5">
@@ -45,11 +45,11 @@
             </a>
             <!-- END: Linked In -->
             <!-- START: Location -->
-            <a href="https://goo.gl/maps/4xtWqqURzunLTXX6A" target="_blank" class="flex flex-row gap-x-2">
+            <a href="https://maps.app.goo.gl/DJgoRCSzzX3QiRXs8" target="_blank" class="flex flex-row gap-x-2">
               <i class="fa-solid fa-map-location my-auto"></i>
               <span class="my-auto"></span>
-              <span class="my-auto hidden print:inline">Fullerton, CA 92833</span>
-              <span class="my-auto inline print:hidden">Fullerton, California 92833</span>
+              <span class="my-auto hidden print:inline">Anaheim, CA 92806</span>
+              <span class="my-auto inline print:hidden">Anaheim, California 92806</span>
             </a>
             <!-- END: Location -->
             <!-- START: Online Portfolio -->
