update title and dates of csuf lead position

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -75,12 +75,12 @@
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
-                <p class="font-bold">Intramural Sports Lead</p>
+                <p class="font-bold">Intramural Sports Lead / Official</p>
                 <a href="https://asi.fullerton.edu/" target="_blank" class="italic">Cal Sate Fullerton, Associated Students Inc.</a>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August 2022 - Present</p>
-                <p class="xs:hidden">Aug. '22 - Pres.</p>
+                <p class="hidden xs:inline">January 2022 - Present</p>
+                <p class="xs:hidden">Jan. '22 - Pres.</p>
                 <p>Fullerton, CA</p>
               </div>
             </div>
