added future states to states list

--- a/states/index.html
+++ b/states/index.html
@@ -103,9 +103,9 @@
         <p class="text-center">Minnesota</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
       </li>
-      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
+      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Mississippi</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">29 Feb 2024</p>
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
         <p class="text-center">Missouri</p>
@@ -121,7 +121,7 @@
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Nevada</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">Unknown</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">Date Unknown</p>
         <!-- TODO: Ask Parents when we went -->
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
@@ -142,7 +142,7 @@
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">North Carolina</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">Unknown</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">Date Unknown</p>
         <!-- TODO: Ask Parents when we went -->
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
@@ -157,9 +157,9 @@
         <p class="text-center">Oklahoma</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">10 Jul 2018</p>
       </li>
-      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
+      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Oregon</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">7 Mar 2024</p>
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Pennsylvania</p>
@@ -199,16 +199,16 @@
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Washington</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">Unknown</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">Date Unknown</p>
         <!-- TODO: Ask Parents when we went -->
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
         <p class="text-center">West Virginia</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
       </li>
-      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
+      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Wisconsin</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">11 Apr 2024</p>
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
         <p class="text-center">Wyoming</p>
