--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -18,7 +18,8 @@
       <!-- START: Header -->
       <section id="header" class="flex flex-col -space-y-0.5 text-center">
         <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
-        <a href="https://maps.app.goo.gl/DJgoRCSzzX3QiRXs8" target="_blank" class="mx-auto">Anaheim, California 92806</a>
+        <!-- <a href="https://maps.app.goo.gl/DJgoRCSzzX3QiRXs8" target="_blank" class="mx-auto">Anaheim, California 92806</a> -->
+        <a href="https://maps.app.goo.gl/ug4CTv5Vhko9y8Rv6" target="_blank" class="mx-auto">Oxford, Mississippi 38655</a>
         <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[11px] md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
@@ -70,6 +71,27 @@
       <section id="work-experience">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase">Work Experience</h2>
         <div class="flex flex-col gap-y-1.5">
+          <!-- START: Intramural Sports GA -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Intramural Sports & Sport Clubs Graduate Assistant</p>
+                <a href="https://olemiss.edu/campusrec/about/" target="_blank" class="italic">University of Mississippi, Campus Recreation</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">July 2024 - Present</p>
+                <p class="xs:hidden">Jul. '24 - Pres.</p>
+                <p>Oxford, MS</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li>Conduct sports officials in-class and on-field/court trainings</li>
+              <li>Managed payroll for student staff</li>
+              <li>Oversee and advise four sport clubs</li>
+              <li>Operated department software, filled out incident reports, and utilized First Aid/CPR/AED certification</li>
+            </ul>
+          </div>
+          <!-- END: Intramural Sports GA -->
           <!-- START: Intramural Sports Lead -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -100,7 +122,7 @@
           </div>
           <!-- END: Intramural Sports Lead -->
           <!-- START: Intramural Sports Supervisor -->
-          <div class="flex flex-col gap-y-1">
+          <div class="hidden flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Intramural Sports Supervisor / Official</p>
@@ -206,8 +228,9 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Plan and organize annual basketball and flag football retreats and clinics</li>
-              <li>Take notes during monthly meetings</li>
+              <li>Planned and organized annual flag football retreats and clinics</li>
+              <li>Served as a clinician in both flag football and basketball clinics</li>
+              <li>Recorded notes during monthly meetings</li>
             </ul>
           </div>
           <!-- END: Secretary -->
