updated states visited

--- a/states/index.html
+++ b/states/index.html
@@ -23,9 +23,9 @@
         <p class="text-center">Arizona</p>
         <p class="text-center text-xs uppercase text-black text-opacity-60">28 Mar 2020</p>
       </li>
-      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-gray-200 py-0.5 lg:mx-0 lg:w-60">
+      <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-orange-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">Arkansas</p>
-        <p class="text-center text-xs uppercase text-black text-opacity-60">TBD</p>
+        <p class="text-center text-xs uppercase text-black text-opacity-60">21 July 2024</p>
       </li>
       <li class="mx-5 flex w-full flex-col rounded-sm border-2 border-gray-500 bg-green-500 py-0.5 font-semibold text-white lg:mx-0 lg:w-60">
         <p class="text-center">California</p>
