added statistical numbers in bullet points

--- a/resume/ga-workshop/index.html
+++ b/resume/ga-workshop/index.html
@@ -17,9 +17,9 @@
     <div class="flex flex-col gap-y-2 print:gap-y-[3px]">
       <!-- START: Header -->
       <section id="header" class="flex flex-col -space-y-0.5 text-center">
-        <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
+        <h1 class="text-2xl font-bold print:text-base">Jake Harvanchik</h1>
         <!-- <a href="https://maps.app.goo.gl/DJgoRCSzzX3QiRXs8" target="_blank" class="mx-auto">Anaheim, California 92806</a> -->
-        <a href="https://maps.app.goo.gl/ug4CTv5Vhko9y8Rv6" target="_blank" class="mx-auto">Oxford, Mississippi 38655</a>
+        <!-- <a href="https://maps.app.goo.gl/ug4CTv5Vhko9y8Rv6" target="_blank" class="mx-auto">Oxford, Mississippi 38655</a> -->
         <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[11px] md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
@@ -98,11 +98,13 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Train officials in various sports (flag football, basketball, soccer, volleyball, etc.)</li>
+              <li>Train 45 officials in various sports (flag football, basketball, soccer, volleyball, etc.)</li>
               <li>Serve as the main point of contact for four sport clubs, handling tavel and finances</li>
-              <li>Developer of a new payroll process condensing two hours of work into five minutes</li>
+              <li>Developer of a new payroll process condensing two hours of work into approximately five minutes</li>
               <li>Facilitate trainings for new employees and run frequent meetings</li>
-              <li>Interview and hire new employees as a member of the Ole Miss CR Hiring Committee</li>
+              <li>Schedule staff and league games using WhenToWork and IMLeagues respectively</li>
+              <li>Interview and hire 10-25 new employees each semester as a member of the Ole Miss CR Hiring Committee</li>
+              <li>Conduct 30-day and end-of-semester evaluations for new and returning staff</li>
             </ul>
           </div>
           <!-- END: Intramural Sports GA -->
