update education to v2 resume

--- a/resume/ga-workshop/index.html
+++ b/resume/ga-workshop/index.html
@@ -17,7 +17,7 @@
     <div class="flex flex-col gap-y-2 print:gap-y-[3px]">
       <!-- START: Header -->
       <section id="header" class="flex flex-col -space-y-0.5 text-center">
-        <h1 class="text-2xl font-bold print:text-base">Jake Harvanchik</h1>
+        <h1 class="text-2xl font-bold print:text-base">Jake L. Harvanchik</h1>
         <!-- <a href="https://maps.app.goo.gl/DJgoRCSzzX3QiRXs8" target="_blank" class="mx-auto">Anaheim, California 92806</a> -->
         <!-- <a href="https://maps.app.goo.gl/ug4CTv5Vhko9y8Rv6" target="_blank" class="mx-auto">Oxford, Mississippi 38655</a> -->
         <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[11px] md:max-w-none">
