--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -63,6 +63,19 @@
               <p>Fullerton, CA</p>
             </div>
           </div>
+          <div class="flex flex-row justify-between">
+            <div class="flex flex-col">
+              <p class="flex flex-row space-x-3">
+                <span class="font-bold">Master of Science, Sports Management</span>
+              </p>
+              <a href="https://www.fullerton.edu" target="_blank" class="italic">University of Mississippi</a>
+            </div>
+            <div class="flex min-w-max flex-col text-right">
+              <p class="hidden xs:inline">May 2026</p>
+              <p class="xs:hidden">May '26</p>
+              <p>Oxford, MS</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- END: Education -->
