enhance work experience section with detailed responsibilities and achievements; add new certifications for First Aid/CPR and Mental Health First Aid

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -98,10 +98,48 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Conduct sports officials in-class and on-field/court trainings</li>
-              <li>Managed payroll for student staff</li>
-              <li>Oversee and advise four sport clubs</li>
-              <li>Operated department software, filled out incident reports, and utilized First Aid/CPR/AED certification</li>
+              <li
+                >Lead comprehensive training sessions for diverse staff groups, including Sport Assistants, Intramural Officials, Supervisors, and
+                Program Assistants, ensuring role-specific competency</li
+              >
+              <li
+                >Leverage <a href="https://www.whentowork.com/" target="_blank">WhenToWork</a> to optimize staff scheduling and utilize
+                <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a> to coordinate league games</li
+              >
+              <li
+                >Maintain complete oversight of 2-3 intramural sports per semester via
+                <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a>, managing 3-5 distinct leagues per sport including Men's Recreation
+                and Competitive, Women's, CoRec, and Unified divisions</li
+              >
+              <li
+                >Collaborate with fellow Graduate Assistants to design the semester-long intramural sports and tournament calendar, including the
+                strategic integration of staff training dates</li
+              >
+              <li
+                >Contribute to the Campus Recreation Hiring Committee by evaluating a pool of 200+ applicants and interviewing 25+ candidates per
+                semester to maintain optimal staffing levels</li
+              >
+              <li
+                >Serve as the primary point of contact for four sport clubs, overseeing travel logistics, ensuring budget compliance, and coordinating
+                club events and tournaments</li
+              >
+              <li
+                >Engineer a streamlined payroll process that condenses two or more hours of manual work into less than 30 minutes, reducing processing
+                time by 75%</li
+              >
+              <li
+                >Manage the "RECognition Points" leaderboard using <a href="https://www.whentowork.com/" target="_blank">WhenToWork</a> custom reports
+                and complex <a href="https://www.google.com/sheets/about/" target="_blank">Google Sheets</a> formulas to gamify performance and
+                incentivize staff shift coverage</li
+              >
+              <li
+                >Direct my officials committee to curate game film from practicum students and lead film review sessions to enhance officials'
+                technical mechanics and rule knowledge</li
+              >
+              <li
+                >Facilitate monthly 15-minute professional development meetings with eight undergraduate student staff and conduct periodic
+                consultation meetings with assigned sport club officers</li
+              >
             </ul>
           </div>
           <!-- END: Intramural Sports GA -->
@@ -447,6 +485,7 @@
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Certifications</h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: RTE Certification -->
+          <!--
           <div id="rte-cert" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
@@ -461,7 +500,38 @@
               </div>
             </div>
           </div>
+          -->
           <!-- END: RTE Certification -->
+
+          <!-- START: American Red Cross CPR Instructor -->
+          <div id="arc-cpr-instructor" class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <a href="https://www.redcross.org/take-a-class/teach" target="_blank" class="font-bold">First Aid/CPR/AED Instructor </a>
+                <a href="https://www.redcross.org/" target="_blank" class="italic">American Red Cross</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">January 2027</p>
+                <p class="xs:hidden">Jan. '27</p>
+              </div>
+            </div>
+          </div>
+          <!-- END: American Red Cross CPR Instructor -->
+
+          <!-- START: Adult Mental Health First Aid -->
+          <div id="mhfa-cert" class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <a href="https://www.mentalhealthfirstaid.org/" target="_blank" class="font-bold">Adult Mental Health First Aid</a>
+                <a href="https://www.mentalhealthfirstaid.org/" target="_blank" class="italic">Mental Health First Aid</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2028</p>
+                <p class="xs:hidden">Aug. '28</p>
+              </div>
+            </div>
+          </div>
+          <!-- END: Adult Mental Health First Aid -->
         </div>
       </section>
       <!-- END: Certifications -->
